Bug 251946 - Gwenview crashed after closing it [KDirLister::url, urlForNode, nodeForUrl, indexForUrl, Gwenview::SortedDirModel::indexForUrl, Gwenview::DocumentInfoProvider::emitDocumentChanged]
Summary: Gwenview crashed after closing it [KDirLister::url, urlForNode, nodeForUrl, i...
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
: 242935 252978 254153 254489 255136 256190 256354 259794 262239 270656 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-09-21 16:47 UTC by Leonardo La Malfa
Modified: 2012-10-19 13:25 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (7.72 KB, text/plain)
2010-12-08 00:36 UTC, Tom Kijas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Leonardo La Malfa 2010-09-21 16:47:35 UTC
Application: gwenview (2.5.0)
KDE Platform Version: 4.5.1 (KDE 4.5.1)
Qt Version: 4.7.0
Operating System: Linux 2.6.32-24-generic i686
Distribution: Ubuntu 10.04.1 LTS

-- Information about the crash:
- What I was doing when the application crashed:

I clicked on the red X to quit Gwenview, but then I got this crash I'm reporting.

-- Backtrace:
Application: Gwenview (gwenview), signal: Segmentation fault
[Current thread is 1 (Thread 0xb779a710 (LWP 3713))]

Thread 2 (Thread 0xb511ab70 (LWP 5478)):
#0  0x00210340 in __i686.get_pc_thunk.bx () from /lib/tls/i686/cmov/libpthread.so.0
#1  0x00215319 in __pthread_mutex_unlock_usercnt () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x00621be6 in pthread_mutex_unlock () from /lib/tls/i686/cmov/libc.so.6
#3  0x024e9ab8 in IA__g_main_context_prepare (context=0x9e85488, priority=0xb511a13c) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2278
#4  0x024e9ee9 in g_main_context_iterate (context=0x9e85488, block=<value optimized out>, dispatch=1, self=0x9ac6be0) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2571
#5  0x024ea4b8 in IA__g_main_context_iteration (context=0x9e85488, may_block=1) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2654
#6  0x00bda82f in QEventDispatcherGlib::processEvents (this=0x9e44010, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#7  0x00baaa99 in QEventLoop::processEvents (this=0xb511a290, flags=) at kernel/qeventloop.cpp:149
#8  0x00baaf1a in QEventLoop::exec (this=0xb511a290, flags=...) at kernel/qeventloop.cpp:201
#9  0x00aa7c5e in QThread::exec (this=0x9e32090) at thread/qthread.cpp:490
#10 0x00b899ab in QInotifyFileSystemWatcherEngine::run (this=0x9e32090) at io/qfilesystemwatcher_inotify.cpp:248
#11 0x00aaaf39 in QThreadPrivate::start (arg=0x9e32090) at thread/qthread_unix.cpp:266
#12 0x0021196e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#13 0x00614a4e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb779a710 (LWP 3713)):
[KCrash Handler]
#7  KDirLister::url (this=0x49) at ../../kio/kio/kdirlister.cpp:2031
#8  0x008c172c in KDirModelPrivate::urlForNode (this=0x9589288, _url=...) at ../../kio/kio/kdirmodel.cpp:170
#9  KDirModelPrivate::nodeForUrl (this=0x9589288, _url=...) at ../../kio/kio/kdirmodel.cpp:197
#10 0x008c1885 in KDirModel::indexForUrl (this=0x9765aa0, url=...) at ../../kio/kio/kdirmodel.cpp:963
#11 0x00430986 in Gwenview::SortedDirModel::indexForUrl (this=0x94ebde0, url=...) at ../../../gwenview/lib/semanticinfo/sorteddirmodel.cpp:186
#12 0x0806ab1a in Gwenview::DocumentInfoProvider::emitDocumentChanged (this=0x95c9140, url=...) at ../../../gwenview/app/documentinfoprovider.cpp:117
#13 0x0806ae07 in Gwenview::DocumentInfoProvider::qt_metacall (this=0x95c9140, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0xbfbae398) at ./documentinfoprovider.moc:76
#14 0x00bb1d4a in QMetaObject::metacall (object=0x95c9140, cl=13492212, idx=7, argv=0xbfbae398) at kernel/qmetaobject.cpp:237
#15 0x00bc4ab5 in QMetaObject::activate (sender=0x4818c8, m=0x47c6e8, local_signal_index=1, argv=0xbfbae398) at kernel/qobject.cpp:3280
#16 0x00400ec3 in Gwenview::DocumentFactory::documentChanged (this=0x4818c8, _t1=...) at ./documentfactory.moc:109
#17 0x00401a14 in Gwenview::DocumentFactory::slotSaved (this=0x4818c8, oldUrl=..., newUrl=...) at ../../../gwenview/lib/document/documentfactory.cpp:216
#18 0x00401bbc in Gwenview::DocumentFactory::qt_metacall (this=0x4818c8, _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0xbfbae554) at ./documentfactory.moc:89
#19 0x00bb1d4a in QMetaObject::metacall (object=0x4818c8, cl=13492212, idx=8, argv=0xbfbae554) at kernel/qmetaobject.cpp:237
#20 0x00bc4ab5 in QMetaObject::activate (sender=0x9cdc928, m=0x47c668, local_signal_index=6, argv=0xbfbae554) at kernel/qobject.cpp:3280
#21 0x003fe739 in Gwenview::Document::saved (this=0x9cdc928, _t1=..., _t2=...) at ./document.moc:172
#22 0x003fe897 in Gwenview::Document::slotSaveResult (this=0x9cdc928, job=0x9e9b250) at ../../../gwenview/lib/document/document.cpp:247
#23 0x003feeff in Gwenview::Document::qt_metacall (this=0x9cdc928, _c=QMetaObject::InvokeMetaMethod, _id=20, _a=0xbfbae6e8) at ./document.moc:118
#24 0x00bb1d4a in QMetaObject::metacall (object=0x9cdc928, cl=13492212, idx=20, argv=0xbfbae6e8) at kernel/qmetaobject.cpp:237
#25 0x00bc4ab5 in QMetaObject::activate (sender=0x9e9b250, m=0x5908b48, local_signal_index=3, argv=0xbfbae6e8) at kernel/qobject.cpp:3280
#26 0x05795b13 in KJob::result (this=0x9e9b250, _t1=0x9e9b250) at ./kjob.moc:194
#27 0x05795e78 in KJob::emitResult (this=0x9e9b250) at ../../kdecore/jobs/kjob.cpp:312
#28 0x00409cb0 in Gwenview::DocumentJob::emitResult (this=0x9e9b250) at ../../../gwenview/lib/../lib/document/documentjob.h:77
#29 Gwenview::SaveJob::finishSave (this=0x9e9b250) at ../../../gwenview/lib/document/savejob.cpp:134
#30 0x003f3e2b in Gwenview::SaveJob::qt_metacall (this=0x9e9b250, _c=QMetaObject::InvokeMetaMethod, _id=32, _a=0xbfbae87c) at moc_savejob.cpp:77
#31 0x00bb1d4a in QMetaObject::metacall (object=0x9e9b250, cl=13492212, idx=32, argv=0xbfbae87c) at kernel/qmetaobject.cpp:237
#32 0x00bc4ab5 in QMetaObject::activate (sender=0x9f1c458, m=0xcdca68, local_signal_index=1, argv=0x0) at kernel/qobject.cpp:3280
#33 0x00c13127 in QFutureWatcherBase::finished (this=0x9f1c458) at .moc/release-shared/moc_qfuturewatcher.cpp:127
#34 0x00a9ac8c in QFutureWatcherBasePrivate::sendCallOutEvent (this=0xbfbae168, event=0xb4865690) at concurrent/qfuturewatcher.cpp:430
#35 0x00a9b5da in QFutureWatcherBase::event (this=0x9f1c458, event=0xb4865690) at concurrent/qfuturewatcher.cpp:344
#36 0x03f2d77c in QApplicationPrivate::notify_helper (this=0x946d790, receiver=0x9f1c458, e=0xb4865690) at kernel/qapplication.cpp:4396
#37 0x03f337ce in QApplication::notify (this=0xbfbaf0ec, receiver=0x9f1c458, e=0xb4865690) at kernel/qapplication.cpp:3798
#38 0x00ec9a9a in KApplication::notify (this=0xbfbaf0ec, receiver=0x9f1c458, event=0xb4865690) at ../../kdeui/kernel/kapplication.cpp:310
#39 0x00babfeb in QCoreApplication::notifyInternal (this=0xbfbaf0ec, receiver=0x9f1c458, event=0xb4865690) at kernel/qcoreapplication.cpp:732
#40 0x00baf24b in QCoreApplication::sendEvent (receiver=0x0, event_type=0, data=0x9458a58) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#41 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x9458a58) at kernel/qcoreapplication.cpp:1373
#42 0x00baf40d in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1266
#43 0x00bdad04 in QCoreApplication::sendPostedEvents (s=0x946fb10) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#44 postEventSourceDispatch (s=0x946fb10) at kernel/qeventdispatcher_glib.cpp:277
#45 0x024e65e5 in g_main_dispatch (context=0x946fa90) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:1960
#46 IA__g_main_context_dispatch (context=0x946fa90) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2513
#47 0x024ea2d8 in g_main_context_iterate (context=0x946fa90, block=<value optimized out>, dispatch=1, self=0x946da20) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2591
#48 0x024ea4b8 in IA__g_main_context_iteration (context=0x946fa90, may_block=1) at /build/buildd/glib2.0-2.24.1/glib/gmain.c:2654
#49 0x00bda7f5 in QEventDispatcherGlib::processEvents (this=0x94585e8, flags=...) at kernel/qeventdispatcher_glib.cpp:415
#50 0x03feede5 in QGuiEventDispatcherGlib::processEvents (this=0x94585e8, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#51 0x00baaa99 in QEventLoop::processEvents (this=0xbfbaf034, flags=) at kernel/qeventloop.cpp:149
#52 0x00baaf1a in QEventLoop::exec (this=0xbfbaf034, flags=...) at kernel/qeventloop.cpp:201
#53 0x00baf4cf in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#54 0x03f2c5a7 in QApplication::exec () at kernel/qapplication.cpp:3672
#55 0x0808542d in main (argc=6, argv=0xbfbaf254) at ../../../gwenview/app/main.cpp:139

Reported using DrKonqi
Comment 1 Dario Andres 2010-11-15 23:23:58 UTC
[Comment from a bug triager]
From bug 254153:
- What I was doing when the application crashed:
Opened a Pic,browsed some in the same folder,opened some other,then exitted the
program.Then it crashed.

From bug 254489:
- What I was doing when the application crashed:
Crash at close when loading xfc file, I have not wait the end of loading
Comment 2 Dario Andres 2010-11-15 23:24:06 UTC
*** Bug 254153 has been marked as a duplicate of this bug. ***
Comment 3 Dario Andres 2010-11-15 23:24:10 UTC
*** Bug 254489 has been marked as a duplicate of this bug. ***
Comment 4 Dario Andres 2010-11-15 23:25:41 UTC
Bug 256190 and bug 255136 have other related crashes
Comment 5 Aurelien Gateau 2010-11-22 23:40:55 UTC
*** Bug 256354 has been marked as a duplicate of this bug. ***
Comment 6 Aurelien Gateau 2010-11-22 23:41:56 UTC
*** Bug 255136 has been marked as a duplicate of this bug. ***
Comment 7 Aurelien Gateau 2010-11-22 23:42:19 UTC
*** Bug 252978 has been marked as a duplicate of this bug. ***
Comment 8 Aurelien Gateau 2010-11-22 23:56:41 UTC
SVN commit 1199861 by gateau:

Make sure DocumentInfoProvider is deleted when the dirmodel is deleted

BUG:251946

 M  +2 -1      documentinfoprovider.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1199861
Comment 9 Aurelien Gateau 2010-11-23 00:15:58 UTC
*** Bug 242935 has been marked as a duplicate of this bug. ***
Comment 10 Tom Kijas 2010-12-08 00:36:01 UTC
Created attachment 54277 [details]
New crash information added by DrKonqi

gwenview (2.5.0) on KDE Platform 4.5.80 (4.6 Beta1) using Qt 4.7.0

- What I was doing when the application crashed:

Hi, I closed gwenview using cross as usual and the gwenview crashed, so reporting.
Sincerely
T.Kijas

-- Backtrace (Reduced):
#6  urlForNode (this=0xa00000001, _url=<value optimized out>) at ../../kio/kio/kdirmodel.cpp:170
#7  KDirModelPrivate::nodeForUrl (this=0xa00000001, _url=<value optimized out>) at ../../kio/kio/kdirmodel.cpp:197
#8  0x00007fbbf40f071d in KDirModel::indexForUrl (this=0x266f1a0, url=...) at ../../kio/kio/kdirmodel.cpp:965
#9  0x00007fbbf4525202 in Gwenview::SortedDirModel::indexForUrl (this=0x2641500, url=...) at ../../../gwenview/lib/semanticinfo/sorteddirmodel.cpp:186
#10 0x00000000004295fb in Gwenview::DocumentInfoProvider::emitBusyStateChanged (this=0x281cfe0, url=<value optimized out>, busy=false) at ../../../gwenview/app/documentinfoprovider.cpp:108
Comment 11 Dario Andres 2010-12-13 14:55:37 UTC
@Aurelien: should this bug be reopened or does the last comment look like a different case ?
Regards
Comment 12 Clemens Eisserer 2010-12-21 22:34:37 UTC
just experienced the following crash with kde-4.5.4:

Thread 1 (Thread 0xb78ac780 (LWP 5419)):
[KCrash Handler]
#7  0x07d0da70 in Gwenview::SortedDirModel::indexForUrl(KUrl const&) const () from /usr/lib/libgwenviewlib.so.4
#8  0x08067c72 in _start ()
Comment 13 Jekyll Wu 2012-05-29 09:33:21 UTC
*** Bug 262239 has been marked as a duplicate of this bug. ***
Comment 14 Jekyll Wu 2012-05-29 09:33:37 UTC
*** Bug 270656 has been marked as a duplicate of this bug. ***
Comment 15 Jekyll Wu 2012-05-29 09:34:20 UTC
*** Bug 256190 has been marked as a duplicate of this bug. ***
Comment 16 Jekyll Wu 2012-07-04 14:02:44 UTC
*** Bug 259794 has been marked as a duplicate of this bug. ***