Make sure DocumentInfoProvider is deleted when the dirmodel is deleted

BUG:251946

svn path=/trunk/KDE/kdegraphics/gwenview/; revision=1199861